infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: burinake
  labels:
    app.kubernetes.io/name: burinake
    app.kubernetes.io/part-of: burinake
    app.kubernetes.io/environment: prd
